<b>2012-12-28</b>

* Bugfix: Add some margin above/below the Analyze charts to accommodate mouseover highlight.

<b>2011-11-20</b>

* Update OpenLayers to 2.11.  Fixes Android compatibility.

<b>2011-11-17</b>

* Bugfix: Can't export airline maps to CSV 

<b>2010-10-04</b>

* Change charts on analysis page to JavaScript-based charts.
* Show counts for each pie chart entry.

<b>2011-07-10</b>

* Bugfix: Unable to login after session expiry (2915135)
* Tech: Airport search migrated to JSON, cleaned up
 
<b>2011-06-18</b>

* Bugfix: Adding new flights after screen reload fixed
* Tech: Login migrated to JSON

<b>2011-06-09</b>

* Add exports to GCMap (courtesy of Andrew Chen)
* Add "Class by distance" pie chart to stats (courtest of Andrew Chen)

<b>2011-04-25</b>

* Add /query/X URLs for direct access to airport, airline route maps

<b>2011-02-15</b>

* Allow users to submit corrections to airports they do not own (3178838,3107183)

<b>2011-02-07</b>

* Bugfix: Block export of demo data when not logged in

<b>2011-02-03</b>

* Bugfix: Facebook updates should work again (thanks Niko!)

<b>2010-11-30</b>

* Optimized/compressed images, JavaScript, CSS with Zoompf for faster loading

<b>2010-11-22</b>

* Bugfix: FlightMemory import check for non-IATA airlines broken
* Bugfix: Some FlightMemory dates incorrectly parsed to include 00:00:00 timestamps

<b>2010-11-11</b>

* Migrated FlightMemory import code to phpQuery
* Bugfix: FlightMemory imports with non-ASCII characters fail (2824341) 
* Bugfix: Use correct UTF-8 byte order mark in CSV exports
* Bugfix: CSV imports handled middle seats incorrectly sometimes

<b>2010-10-24</b>

* New "All" option in Top X, implements More than Top 50 in "Top 10" section (3089206)
* Bugfix: Banner in miles instead of kilometers (3091634)

<b>2010-10-16</b>

* Dates and times can now be entered without separators (3074343)
* Bugfix: Error after connecting to facebook app (with different user) (3084823)

<b>2010-08-22</b>
