@@ -1,3 +1,7 @@
+<b>2012-02-29</b>
+
+* Add ellipsis to truncated notes in flight list.
+
 <b>2012-12-28</b>
 
 * Bugfix: Add some margin above/below the Analyze charts to accommodate mouseover highlight.
